@@ -24,19 +24,18 @@ import android.os.IBinder;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 import androidx.concurrent.futures.ResolvableFuture;
+import androidx.test.ext.junit.runners.AndroidJUnit4;
 import androidx.wear.protolayout.ResourceBuilders;
 
+import com.google.common.collect.ImmutableList;
 import com.google.common.util.concurrent.ListenableFuture;
 
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.robolectric.RobolectricTestRunner;
 import org.robolectric.annotation.internal.DoNotInstrument;
 
-import java.util.List;
-
-@RunWith(RobolectricTestRunner.class)
+@RunWith(AndroidJUnit4.class)
 @DoNotInstrument
 public class CompositeTileUpdateRequesterTest {
     private FakeUpdateRequester mFakeUpdateRequester1;
@@ -51,7 +50,7 @@ public class CompositeTileUpdateRequesterTest {
 
         mCompositeTileUpdateRequesterUnderTest =
                 new CompositeTileUpdateRequester(
-                        List.of(mFakeUpdateRequester1, mFakeUpdateRequester2));
+                    ImmutableList.of(mFakeUpdateRequester1, mFakeUpdateRequester2));
     }
 
     @Test
@@ -62,7 +61,7 @@ public class CompositeTileUpdateRequesterTest {
         assertThat(mFakeUpdateRequester2.mCalledService).isEqualTo(FakeService.class);
     }
 
-    private class FakeUpdateRequester implements TileUpdateRequester {
+    private static class FakeUpdateRequester implements TileUpdateRequester {
         @Nullable Class<? extends TileService> mCalledService = null;
 
         @Override
@@ -71,7 +70,7 @@ public class CompositeTileUpdateRequesterTest {
         }
     }
 
-    private class FakeService extends TileService {
+    private static class FakeService extends TileService {
         @NonNull
         @Override
         protected ListenableFuture<TileBuilders.Tile> onTileRequest(
